# campnw

./: .dockerignore  .gitignore  .lighthouserc.js  Dockerfile  README.md  api-validation-findings.md  clearnight-snapshot.txt  fly.toml  page-snapshot.txt  pyproject.toml  start.sh
.claude/: CLAUDE.md
data/: registry.db
docs/: AI-OPPORTUNITIES-2026-03-28.md  BOOKING-ENRICHMENT-IDEAS.md  BRAND.md  D1-BOOKMARKLET-RESEARCH.md  D4-AI-CONCIERGE-RESEARCH.md  PRD-v1.0.md  PRFAQ-v1.0.md  ROADMAP.md  v1.27-color-exploration.html  v1.27-date-labeling.html  v1.27-date-range-picker.html  v1.27-heatmap-labels.html  v1.27-nl-search-placement.html  v1.29-logo-c-variations.html  v1.29-logo-final-6.html  v1.29-logo-final-centered.html  v1.29-logo-final-overlap.html  v1.29-logo-finals.html  v1.29-logo-madrona-v2.html  v1.29-logo-madrona-v3.html  v1.29-logo-madrona-v4.html  v1.29-logo-madrona.html  v1.29-logo-refinement.html  v1.29-logo-tree-types.html
scripts/: audit_tags.py  compact_history.py  compute_drive_times.py  cron_weather_warmup.sh  enrich_registry.py  generate-icons.mjs  geocode_wa_parks.py  populate_drive_times.py  probe_deeper.py  probe_extract_ra.py  probe_extract_ra2.py  probe_extract_ra3.py  probe_idaho_time.py  probe_reserveamerica.py  probe_unifsearch.py  seed_or_state.py  seed_registry.py  seed_wa_state.py  seed_wa_state_metadata.py  sync-registry.sh  validate_apis.py  warm_weather_cache.py
tests/: conftest.py  test_analytics_digest.py  test_api_auth.py  test_api_coverage.py  test_api_endpoints.py  test_api_exception_handler.py  test_audit_gaps.py  test_auth.py  test_batch_enrichment.py  test_batch_process_results.py  test_client_ip.py  test_compare.py  test_db_users.py  test_description_rewrite.py  test_drive_times_db.py  test_enrichment_llm_tags.py  test_enrichment_notifications.py  test_enrichment_registry_integration.py  test_geo.py  test_geo_expansion.py  test_history_compact.py  test_mapbox.py  test_nl_parser.py  test_notification_quality.py  test_notify.py  test_onboarding.py  test_patterns.py  test_perf_endpoint.py  test_planner.py  test_planner_agent.py  test_poll_tranche.py  test_posthog_client.py  test_provider_goingtocamp.py  test_provider_recgov.py  test_provider_reserveamerica.py  test_provider_weather.py  test_registry_db.py  test_registry_models.py  test_save_trip.py  test_search_engine.py  (+10 more)
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  (+1 more)
(+129 files in other folders)
