[project]
name = "pnw-campsites"
version = "0.1.0"
description = "PNW campsite discovery and monitoring tool"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "curl_cffi>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
]
notify = [
    "ntfy-wrapper>=0.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pnw_campsites/api.py" = ["B008"]  # Query() in FastAPI defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pnw_campsites"]
omit = ["*/scripts/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = ["if __name__", "pragma: no cover"]
